[metadata]
name = probequest
version = 0.8.0
description = Toolkit for Playing with Wi-Fi Probe Requests.
long_description = file: README.rst
keywords = wifi, wireless, security, sniffer
license = GPLv3
license_files = LICENSE
author = Paul-Emmanuel Raoul
author_email = skyper@skyplabs.net
url = https://github.com/SkypLabs/probequest
project_urls =
    Bug Tracker = https://github.com/SkypLabs/probequest/issues
    Documentation = https://probequest.readthedocs.io
    Source Code = https://github.com/SkypLabs/probequest
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Information Technology
    Natural Language :: English
    Topic :: Security
    Topic :: System :: Networking
    Topic :: System :: Networking :: Monitoring
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7, <4
install_requires =
    netaddr >= 0.7.19
    rich >= 12.2
    scapy >= 2.4.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    probequest = probequest.cli:main

[options.extras_require]
complete =
    faker_wifi_essid
tests =
    flake8
    pylint
    tox
docs =
    Sphinx >= 3.2
    sphinxcontrib-seqdiag >= 2.0.0
    sphinx-argparse >= 0.2.2
    sphinx_rtd_theme >= 0.5.0

[pylint.message_control]
disable = duplicate-code
